[package]
name = "rust-test"
version = "0.1.0"
authors = ["luojia65 <me@luojia.cc>"]
edition = "2018"

default-run = "rust-test"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-std = { version = "1", features = ["attributes"] }
# lazy_static = "*"
rand = "*"
num = "*"
